# ZAA

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  deploy.sh  docker-compose.yml  env.example  logger.py  nginx.conf  plugin_example.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  start.sh  stop.sh  vercel.json  zero_system.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  main.yml  security.yml  tests.yml
backend/: Dockerfile  LICENSE  README.ar.md  README.md  __init__.py  api.py  app.py  env.example  main.py  pyproject.toml  requirements.txt  test_api.py  zero_system.py
backend/alembic/: env.py
backend/api/: main.py  routes.py
backend/core/: auth.py  auto_evaluation.py  cache.py  config.py  contextual_personalization.py  database.py  emotion_engine.py  evaluation.py  explainability.py  inverse_prompting.py  llm.py  meta_learning.py  persona_discovery.py  security.py  validation.py
backend/models/: interaction.py  (+3 more)
docs/: TECHNICAL.md  deployment.ar.md  deployment.md
frontend/: Dockerfile  README.md  ai-dashboard.tsx  env.example  globals.css  jest.config.js  layout.tsx  lighthouserc.js  next.config.js  next.config.mjs  package.json  page.tsx  playwright.config.ts  postcss.config.js  security.config.js  sentry.config.js  tailwind.config.js  tailwind.config.ts
k8s/: autoscale.yaml  deployment.yml
monitoring/: README.md
nginx/: nginx.conf
prometheus/: alertmanager.yml  prometheus.yml  rules.yml
(+145 files in other folders)
